src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> module
Rule 1     module -> KEY_MODULE IDENT SCOLON declarationSequence KEY_BEGIN statementSequence KEY_END IDENT DOT
Rule 2     declarationSequence -> declarationSequence KEY_CONST conss
Rule 3     declarationSequence -> declarationSequence KEY_TYPE typess
Rule 4     declarationSequence -> declarationSequence KEY_VAR varss
Rule 5     declarationSequence -> declarationSequence procss
Rule 6     declarationSequence -> empty
Rule 7     conss -> conss constantDeclaration SCOLON
Rule 8     conss -> constantDeclaration SCOLON
Rule 9     typess -> typess typeDeclaration SCOLON
Rule 10    typess -> typeDeclaration SCOLON
Rule 11    varss -> varss variableDeclaration SCOLON
Rule 12    varss -> variableDeclaration SCOLON
Rule 13    procss -> procss procedureDeclaration SCOLON
Rule 14    procss -> procedureDeclaration SCOLON
Rule 15    statementSequence -> statementSequence statement SCOLON
Rule 16    statementSequence -> empty
Rule 17    constantDeclaration -> IDENT ASSIGN expression COLON type
Rule 18    expression -> simpleExpression
Rule 19    expression -> simpleExpression relation simpleExpression
Rule 20    simpleExpression -> PLUS term simpless
Rule 21    simpleExpression -> term simpless
Rule 22    simpleExpression -> MINUS term simpless
Rule 23    simpless -> simpless addOperator term
Rule 24    simpless -> empty
Rule 25    term -> factor termss
Rule 26    termss -> termss mulOperator factor
Rule 27    termss -> empty
Rule 28    factor -> number
Rule 29    factor -> boolean
Rule 30    factor -> char
Rule 31    factor -> string
Rule 32    factor -> KEY_NIL LRB designator RRB
Rule 33    factor -> set
Rule 34    factor -> designator
Rule 35    factor -> designator actualParameters
Rule 36    factor -> LRB expression RRB
Rule 37    factor -> NOT factor
Rule 38    factor -> KEY_ABS factor
Rule 39    factor -> KEY_CHR factor
Rule 40    factor -> KEY_ORD factor
Rule 41    factor -> KEY_INTEGER
Rule 42    factor -> KEY_BOOLEAN
Rule 43    factor -> KEY_CHAR
Rule 44    factor -> KEY_STRING
Rule 45    factor -> KEY_REAL
Rule 46    factor -> KEY_SET
Rule 47    factor -> KEY_FILE
Rule 48    factor -> KEY_CHR LRB factor RRB
Rule 49    factor -> KEY_ORD LRB factor RRB
Rule 50    number -> VINTEGER
Rule 51    number -> VREAL
Rule 52    boolean -> VBOOLEAN
Rule 53    char -> VCHAR
Rule 54    string -> VSTRING
Rule 55    set -> LCB element COMMA element RCB
Rule 56    set -> LCB RCB
Rule 57    element -> expression
Rule 58    designator -> qualident designator2
Rule 59    designator2 -> designator2 DOT identdef
Rule 60    designator2 -> designator2 LSB expList RSB
Rule 61    designator2 -> empty
Rule 62    qualident -> identdef
Rule 63    qualident -> identdef DOT qualident
Rule 64    identdef -> IDENT
Rule 65    identdef -> AT IDENT
Rule 66    expList -> expList COMMA expression
Rule 67    expList -> expression
Rule 68    actualParameters -> LRB expList RRB
Rule 69    actualParameters -> LRB RRB
Rule 70    mulOperator -> MULTIPLY
Rule 71    mulOperator -> DIVIDE
Rule 72    mulOperator -> MODULUS
Rule 73    mulOperator -> AND
Rule 74    addOperator -> PLUS
Rule 75    addOperator -> MINUS
Rule 76    addOperator -> OR
Rule 77    relation -> EQUAL
Rule 78    relation -> NEQUAL
Rule 79    relation -> LT
Rule 80    relation -> LTEQ
Rule 81    relation -> GT
Rule 82    relation -> GTEQ
Rule 83    relation -> KEY_IN
Rule 84    relation -> KEY_IS
Rule 85    typeDeclaration -> IDENT EQUAL type
Rule 86    type -> IDENT
Rule 87    type -> varType
Rule 88    type -> arrayType
Rule 89    type -> recordType
Rule 90    type -> pointerType
Rule 91    varType -> KEY_INTEGER
Rule 92    varType -> KEY_BOOLEAN
Rule 93    varType -> KEY_CHAR
Rule 94    varType -> KEY_STRING
Rule 95    varType -> KEY_REAL
Rule 96    varType -> KEY_SET
Rule 97    varType -> KEY_FILE
Rule 98    arrayType -> KEY_ARRAY length comass KEY_OF type
Rule 99    comass -> comass COMMA length
Rule 100   comass -> empty
Rule 101   length -> expression
Rule 102   recordType -> KEY_RECORD fieldListSequence KEY_END
Rule 103   recordType -> KEY_RECORD LRB baseType RRB fieldListSequence KEY_END
Rule 104   baseType -> qualident
Rule 105   fieldListSequence -> fieldListSequence SCOLON fieldList
Rule 106   fieldListSequence -> fieldList
Rule 107   fieldList -> identList COLON type
Rule 108   fieldList -> empty
Rule 109   identList -> identList COMMA IDENT
Rule 110   identList -> IDENT
Rule 111   pointerType -> KEY_POINTER KEY_TO type
Rule 112   variableDeclaration -> identList COLON type
Rule 113   procedureDeclaration -> procedureHeading SCOLON procedureBody IDENT
Rule 114   procedureHeading -> KEY_PROCEDURE IDENT formalParameters COLON type
Rule 115   procedureHeading -> KEY_PROCEDURE IDENT formalParameters
Rule 116   formalParameters -> LRB fpSection formalss RRB
Rule 117   formalParameters -> LRB RRB
Rule 118   formalss -> formalss SCOLON fpSection
Rule 119   formalss -> empty
Rule 120   fpSection -> IDENT fps COLON type
Rule 121   fps -> fps COMMA IDENT
Rule 122   fps -> empty
Rule 123   procedureBody -> declarationSequence KEY_BEGIN statementSequence KEY_END
Rule 124   statement -> assignment
Rule 125   statement -> procedureCall
Rule 126   statement -> ifStatement
Rule 127   statement -> switchStatement
Rule 128   statement -> whileStatement
Rule 129   statement -> forStatement
Rule 130   statement -> doWhileStatement
Rule 131   statement -> KEY_EXIT
Rule 132   statement -> KEY_RETURN expression
Rule 133   statement -> KEY_RETURN
Rule 134   statement -> ioStatement
Rule 135   statement -> fileStatement
Rule 136   statement -> KEY_BREAK
Rule 137   statement -> KEY_CONTINUE
Rule 138   statement -> empty
Rule 139   statement -> memoryalloc
Rule 140   statement -> setStatement
Rule 141   assignment -> designator ASSIGN expression
Rule 142   setStatement -> KEY_ADD LRB qualident COMMA expression RRB
Rule 143   setStatement -> KEY_DEL LRB qualident COMMA expression RRB
Rule 144   memoryalloc -> KEY_NEW LRB designator RRB
Rule 145   procedureCall -> designator actualParameters
Rule 146   procedureCall -> designator
Rule 147   ifStatement -> KEY_IF expression KEY_THEN statementSequence ifss KEY_ELSE statementSequence KEY_END
Rule 148   ifStatement -> KEY_IF expression KEY_THEN statementSequence ifss KEY_END
Rule 149   ifss -> ifss KEY_ELSEIF expression KEY_THEN statementSequence
Rule 150   ifss -> empty
Rule 151   switchStatement -> KEY_SWITCH expression KEY_BEGIN case casess KEY_ELSE COLON statementSequence KEY_END
Rule 152   switchStatement -> KEY_SWITCH expression KEY_BEGIN case casess KEY_END
Rule 153   casess -> case casess
Rule 154   casess -> empty
Rule 155   case -> KEY_CASE expression COLON statementSequence
Rule 156   whileStatement -> KEY_WHILE expression KEY_BEGIN statementSequence KEY_END
Rule 157   forStatement -> KEY_FOR LRB assignment SCOLON expression SCOLON assignment RRB KEY_BEGIN statementSequence KEY_END
Rule 158   doWhileStatement -> KEY_DO KEY_BEGIN statementSequence KEY_END KEY_WHILE expression
Rule 159   ioStatement -> KEY_WRITE LRB expression RRB
Rule 160   ioStatement -> KEY_WRITEINT LRB expression RRB
Rule 161   ioStatement -> KEY_WRITEREAL LRB expression RRB
Rule 162   ioStatement -> KEY_WRITECHAR LRB expression RRB
Rule 163   ioStatement -> KEY_WRITEBOOL LRB expression RRB
Rule 164   ioStatement -> KEY_WRITELN LRB expression RRB
Rule 165   ioStatement -> KEY_WRITELN LRB RRB
Rule 166   ioStatement -> KEY_READ LRB expression RRB
Rule 167   ioStatement -> KEY_READINT LRB expression RRB
Rule 168   ioStatement -> KEY_READREAL LRB expression RRB
Rule 169   ioStatement -> KEY_READCHAR LRB expression RRB
Rule 170   ioStatement -> KEY_READBOOL LRB expression RRB
Rule 171   fileStatement -> identdef EQUAL KEY_FOPEN LRB IDENT COMMA char RRB
Rule 172   fileStatement -> identdef EQUAL KEY_FREAD LRB identdef COMMA VINTEGER RRB
Rule 173   fileStatement -> KEY_FWRITE LRB identdef COMMA string RRB
Rule 174   fileStatement -> KEY_FAPPEND LRB identdef COMMA string RRB
Rule 175   fileStatement -> KEY_FCLOSE LRB identdef RRB
Rule 176   empty -> <empty>

Terminals, with rules where they appear

AND                  : 73
ASSIGN               : 17 141
AT                   : 65
COLON                : 17 107 112 114 120 151 155
COMMA                : 55 66 99 109 121 142 143 171 172 173 174
DIVIDE               : 71
DOT                  : 1 59 63
EQUAL                : 77 85 171 172
GT                   : 81
GTEQ                 : 82
IDENT                : 1 1 17 64 65 85 86 109 110 113 114 115 120 121 171
KEY_ABS              : 38
KEY_ADD              : 142
KEY_ARRAY            : 98
KEY_BEGIN            : 1 123 151 152 156 157 158
KEY_BOOLEAN          : 42 92
KEY_BREAK            : 136
KEY_CASE             : 155
KEY_CHAR             : 43 93
KEY_CHR              : 39 48
KEY_CONST            : 2
KEY_CONTINUE         : 137
KEY_DEL              : 143
KEY_DO               : 158
KEY_ELSE             : 147 151
KEY_ELSEIF           : 149
KEY_END              : 1 102 103 123 147 148 151 152 156 157 158
KEY_EXIT             : 131
KEY_FAPPEND          : 174
KEY_FCLOSE           : 175
KEY_FILE             : 47 97
KEY_FOPEN            : 171
KEY_FOR              : 157
KEY_FREAD            : 172
KEY_FWRITE           : 173
KEY_IF               : 147 148
KEY_IN               : 83
KEY_INTEGER          : 41 91
KEY_IS               : 84
KEY_MODULE           : 1
KEY_NEW              : 144
KEY_NIL              : 32
KEY_OF               : 98
KEY_ORD              : 40 49
KEY_POINTER          : 111
KEY_PROCEDURE        : 114 115
KEY_READ             : 166
KEY_READBOOL         : 170
KEY_READCHAR         : 169
KEY_READINT          : 167
KEY_READREAL         : 168
KEY_REAL             : 45 95
KEY_RECORD           : 102 103
KEY_RETURN           : 132 133
KEY_SET              : 46 96
KEY_STRING           : 44 94
KEY_SWITCH           : 151 152
KEY_THEN             : 147 148 149
KEY_TO               : 111
KEY_TYPE             : 3
KEY_VAR              : 4
KEY_WHILE            : 156 158
KEY_WRITE            : 159
KEY_WRITEBOOL        : 163
KEY_WRITECHAR        : 162
KEY_WRITEINT         : 160
KEY_WRITELN          : 164 165
KEY_WRITEREAL        : 161
LCB                  : 55 56
LRB                  : 32 36 48 49 68 69 103 116 117 142 143 144 157 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175
LSB                  : 60
LT                   : 79
LTEQ                 : 80
MINUS                : 22 75
MODULUS              : 72
MULTIPLY             : 70
NEQUAL               : 78
NOT                  : 37
OR                   : 76
PLUS                 : 20 74
RCB                  : 55 56
RRB                  : 32 36 48 49 68 69 103 116 117 142 143 144 157 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173 174 175
RSB                  : 60
SCOLON               : 1 7 8 9 10 11 12 13 14 15 105 113 118 157 157
VBOOLEAN             : 52
VCHAR                : 53
VINTEGER             : 50 172
VREAL                : 51
VSTRING              : 54
error                : 

Nonterminals, with rules where they appear

actualParameters     : 35 145
addOperator          : 23
arrayType            : 88
assignment           : 124 157 157
baseType             : 103
boolean              : 29
case                 : 151 152 153
casess               : 151 152 153
char                 : 30 171
comass               : 98 99
conss                : 2 7
constantDeclaration  : 7 8
declarationSequence  : 1 2 3 4 5 123
designator           : 32 34 35 141 144 145 146
designator2          : 58 59 60
doWhileStatement     : 130
element              : 55 55
empty                : 6 16 24 27 61 100 108 119 122 138 150 154
expList              : 60 66 68
expression           : 17 36 57 66 67 101 132 141 142 143 147 148 149 151 152 155 156 157 158 159 160 161 162 163 164 166 167 168 169 170
factor               : 25 26 37 38 39 40 48 49
fieldList            : 105 106
fieldListSequence    : 102 103 105
fileStatement        : 135
forStatement         : 129
formalParameters     : 114 115
formalss             : 116 118
fpSection            : 116 118
fps                  : 120 121
identList            : 107 109 112
identdef             : 59 62 63 171 172 172 173 174 175
ifStatement          : 126
ifss                 : 147 148 149
ioStatement          : 134
length               : 98 99
memoryalloc          : 139
module               : 0
mulOperator          : 26
number               : 28
pointerType          : 90
procedureBody        : 113
procedureCall        : 125
procedureDeclaration : 13 14
procedureHeading     : 113
procss               : 5 13
qualident            : 58 63 104 142 143
recordType           : 89
relation             : 19
set                  : 33
setStatement         : 140
simpleExpression     : 18 19 19
simpless             : 20 21 22 23
statement            : 15
statementSequence    : 1 15 123 147 147 148 149 151 155 156 157 158
string               : 31 173 174
switchStatement      : 127
term                 : 20 21 22 23
termss               : 25 26
type                 : 17 85 98 107 111 112 114 120
typeDeclaration      : 9 10
typess               : 3 9
varType              : 87
variableDeclaration  : 11 12
varss                : 4 11
whileStatement       : 128

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . KEY_MODULE IDENT SCOLON declarationSequence KEY_BEGIN statementSequence KEY_END IDENT DOT

    KEY_MODULE      shift and go to state 1

    module                         shift and go to state 2

state 1

    (1) module -> KEY_MODULE . IDENT SCOLON declarationSequence KEY_BEGIN statementSequence KEY_END IDENT DOT

    IDENT           shift and go to state 3


state 2

    (0) S' -> module .



state 3

    (1) module -> KEY_MODULE IDENT . SCOLON declarationSequence KEY_BEGIN statementSequence KEY_END IDENT DOT

    SCOLON          shift and go to state 4


state 4

    (1) module -> KEY_MODULE IDENT SCOLON . declarationSequence KEY_BEGIN statementSequence KEY_END IDENT DOT
    (2) declarationSequence -> . declarationSequence KEY_CONST conss
    (3) declarationSequence -> . declarationSequence KEY_TYPE typess
    (4) declarationSequence -> . declarationSequence KEY_VAR varss
    (5) declarationSequence -> . declarationSequence procss
    (6) declarationSequence -> . empty
    (176) empty -> .

    KEY_BEGIN       reduce using rule 176 (empty -> .)
    KEY_CONST       reduce using rule 176 (empty -> .)
    KEY_TYPE        reduce using rule 176 (empty -> .)
    KEY_VAR         reduce using rule 176 (empty -> .)
    KEY_PROCEDURE   reduce using rule 176 (empty -> .)

    empty                          shift and go to state 5
    declarationSequence            shift and go to state 6

state 5

    (6) declarationSequence -> empty .

    KEY_BEGIN       reduce using rule 6 (declarationSequence -> empty .)
    KEY_CONST       reduce using rule 6 (declarationSequence -> empty .)
    KEY_TYPE        reduce using rule 6 (declarationSequence -> empty .)
    KEY_VAR         reduce using rule 6 (declarationSequence -> empty .)
    KEY_PROCEDURE   reduce using rule 6 (declarationSequence -> empty .)


state 6

    (1) module -> KEY_MODULE IDENT SCOLON declarationSequence . KEY_BEGIN statementSequence KEY_END IDENT DOT
    (2) declarationSequence -> declarationSequence . KEY_CONST conss
    (3) declarationSequence -> declarationSequence . KEY_TYPE typess
    (4) declarationSequence -> declarationSequence . KEY_VAR varss
    (5) declarationSequence -> declarationSequence . procss
    (13) procss -> . procss procedureDeclaration SCOLON
    (14) procss -> . procedureDeclaration SCOLON
    (113) procedureDeclaration -> . procedureHeading SCOLON procedureBody IDENT
    (114) procedureHeading -> . KEY_PROCEDURE IDENT formalParameters COLON type
    (115) procedureHeading -> . KEY_PROCEDURE IDENT formalParameters

    KEY_BEGIN       shift and go to state 12
    KEY_CONST       shift and go to state 13
    KEY_TYPE        shift and go to state 9
    KEY_VAR         shift and go to state 7
    KEY_PROCEDURE   shift and go to state 11

    procss                         shift and go to state 14
    procedureHeading               shift and go to state 10
    procedureDeclaration           shift and go to state 8

state 7

    (4) declarationSequence -> declarationSequence KEY_VAR . varss
    (11) varss -> . varss variableDeclaration SCOLON
    (12) varss -> . variableDeclaration SCOLON
    (112) variableDeclaration -> . identList COLON type
    (109) identList -> . identList COMMA IDENT
    (110) identList -> . IDENT

    IDENT           shift and go to state 15

    varss                          shift and go to state 16
    identList                      shift and go to state 17
    variableDeclaration            shift and go to state 18

state 8

    (14) procss -> procedureDeclaration . SCOLON

    SCOLON          shift and go to state 19


state 9

    (3) declarationSequence -> declarationSequence KEY_TYPE . typess
    (9) typess -> . typess typeDeclaration SCOLON
    (10) typess -> . typeDeclaration SCOLON
    (85) typeDeclaration -> . IDENT EQUAL type

    IDENT           shift and go to state 20

    typess                         shift and go to state 21
    typeDeclaration                shift and go to state 22

state 10

    (113) procedureDeclaration -> procedureHeading . SCOLON procedureBody IDENT

    SCOLON          shift and go to state 23


state 11

    (114) procedureHeading -> KEY_PROCEDURE . IDENT formalParameters COLON type
    (115) procedureHeading -> KEY_PROCEDURE . IDENT formalParameters

    IDENT           shift and go to state 24


state 12

    (1) module -> KEY_MODULE IDENT SCOLON declarationSequence KEY_BEGIN . statementSequence KEY_END IDENT DOT
    (15) statementSequence -> . statementSequence statement SCOLON
    (16) statementSequence -> . empty
    (176) empty -> .

    KEY_END         reduce using rule 176 (empty -> .)
    KEY_EXIT        reduce using rule 176 (empty -> .)
    KEY_RETURN      reduce using rule 176 (empty -> .)
    KEY_BREAK       reduce using rule 176 (empty -> .)
    KEY_CONTINUE    reduce using rule 176 (empty -> .)
    KEY_IF          reduce using rule 176 (empty -> .)
    KEY_SWITCH      reduce using rule 176 (empty -> .)
    KEY_WHILE       reduce using rule 176 (empty -> .)
    KEY_FOR         reduce using rule 176 (empty -> .)
    KEY_DO          reduce using rule 176 (empty -> .)
    KEY_WRITE       reduce using rule 176 (empty -> .)
    KEY_WRITEINT    reduce using rule 176 (empty -> .)
    KEY_WRITEREAL   reduce using rule 176 (empty -> .)
    KEY_WRITECHAR   reduce using rule 176 (empty -> .)
    KEY_WRITEBOOL   reduce using rule 176 (empty -> .)
    KEY_WRITELN     reduce using rule 176 (empty -> .)
    KEY_READ        reduce using rule 176 (empty -> .)
    KEY_READINT     reduce using rule 176 (empty -> .)
    KEY_READREAL    reduce using rule 176 (empty -> .)
    KEY_READCHAR    reduce using rule 176 (empty -> .)
    KEY_READBOOL    reduce using rule 176 (empty -> .)
    KEY_FWRITE      reduce using rule 176 (empty -> .)
    KEY_FAPPEND     reduce using rule 176 (empty -> .)
    KEY_FCLOSE      reduce using rule 176 (empty -> .)
    KEY_NEW         reduce using rule 176 (empty -> .)
    KEY_ADD         reduce using rule 176 (empty -> .)
    KEY_DEL         reduce using rule 176 (empty -> .)
    IDENT           reduce using rule 176 (empty -> .)
    AT              reduce using rule 176 (empty -> .)
    SCOLON          reduce using rule 176 (empty -> .)

    statementSequence              shift and go to state 25
    empty                          shift and go to state 26

state 13

    (2) declarationSequence -> declarationSequence KEY_CONST . conss
    (7) conss -> . conss constantDeclaration SCOLON
    (8) conss -> . constantDeclaration SCOLON
    (17) constantDeclaration -> . IDENT ASSIGN expression COLON type

    IDENT           shift and go to state 29

    conss                          shift and go to state 27
    constantDeclaration            shift and go to state 28

state 14

    (5) declarationSequence -> declarationSequence procss .
    (13) procss -> procss . procedureDeclaration SCOLON
    (113) procedureDeclaration -> . procedureHeading SCOLON procedureBody IDENT
    (114) procedureHeading -> . KEY_PROCEDURE IDENT formalParameters COLON type
    (115) procedureHeading -> . KEY_PROCEDURE IDENT formalParameters

  ! shift/reduce conflict for KEY_PROCEDURE resolved as shift
    KEY_BEGIN       reduce using rule 5 (declarationSequence -> declarationSequence procss .)
    KEY_CONST       reduce using rule 5 (declarationSequence -> declarationSequence procss .)
    KEY_TYPE        reduce using rule 5 (declarationSequence -> declarationSequence procss .)
    KEY_VAR         reduce using rule 5 (declarationSequence -> declarationSequence procss .)
    KEY_PROCEDURE   shift and go to state 11

  ! KEY_PROCEDURE   [ reduce using rule 5 (declarationSequence -> declarationSequence procss .) ]

    procedureHeading               shift and go to state 10
    procedureDeclaration           shift and go to state 30

state 15

    (110) identList -> IDENT .

    COLON           reduce using rule 110 (identList -> IDENT .)
    COMMA           reduce using rule 110 (identList -> IDENT .)


state 16

    (4) declarationSequence -> declarationSequence KEY_VAR varss .
    (11) varss -> varss . variableDeclaration SCOLON
    (112) variableDeclaration -> . identList COLON type
    (109) identList -> . identList COMMA IDENT
    (110) identList -> . IDENT

    KEY_BEGIN       reduce using rule 4 (declarationSequence -> declarationSequence KEY_VAR varss .)
    KEY_CONST       reduce using rule 4 (declarationSequence -> declarationSequence KEY_VAR varss .)
    KEY_TYPE        reduce using rule 4 (declarationSequence -> declarationSequence KEY_VAR varss .)
    KEY_VAR         reduce using rule 4 (declarationSequence -> declarationSequence KEY_VAR varss .)
    KEY_PROCEDURE   reduce using rule 4 (declarationSequence -> declarationSequence KEY_VAR varss .)
    IDENT           shift and go to state 15

    identList                      shift and go to state 17
    variableDeclaration            shift and go to state 31

state 17

    (112) variableDeclaration -> identList . COLON type
    (109) identList -> identList . COMMA IDENT

    COLON           shift and go to state 33
    COMMA           shift and go to state 32


state 18

    (12) varss -> variableDeclaration . SCOLON
